--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ keywords:              [librarain]
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
-# It also used by the `jekyll-seo-tag` plugin.
-logo:                  /assets/img/logo.png
+# It also used by the `jekyll-seo-tag` plugin. /assets/img/logo.png
 
+logo:                 none
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
@@ -48,6 +48,7 @@ author:
   social:
     github:  libraryman # now github appears first
     twitter: lalibraryman
+    twitch:  none
 
 # Add links to the sidebar.
 menu:
