--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,7 +14,7 @@ author1:
 
   # This photo will be used in the about section
   picture:
-    path:            https://placehold.it/128x128
+    path:            https://avatars2.githubusercontent.com/u/3819381?s=460&u=ece2bb902a8726087dd0040eeff7248fd0d36eae&v=4
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
       1x:            https://placehold.it/128x128
