--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ keywords:              [librarain]
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
-# It also used by the `jekyll-seo-tag` plugin. /assets/img/logo.png
+# It also used by the `jekyll-seo-tag` plugin. /assets/img/jeff.png
 
-logo:                 none
+logo:                 /assets/img/jeff.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
