--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ keywords:              [librarain]
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin. /assets/img/jeff.png
 
-logo:                 /assets/img/jeff.png
+logo:                 /assets/img/jeff.jpeg
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
